crates/config/tests/snapshots/project_config__project_config_discovery_validates_paths_and_conflicts.snap
---
source: crates/config/tests/project_config.rs
expression: "(config_file.path.file_name(), config_file.exists, config_file.config,)"
---
(
    Some(
        "pv.yml",
    ),
    true,
    ProjectConfig {
        serve: true,
        env_file: ".env",
        php: None,
        root: Some(
            "public",
        ),
        env: {},
        resources: {},
    },
)
