crates/config/tests/snapshots/project_config__project_config_expands_yaml_aliases_and_merge_keys.snap
---
source: crates/config/tests/project_config.rs
expression: config
---
ProjectConfig {
    serve: true,
    env_file: ".env",
    php: None,
    root: None,
    env: {
        "MATH": "2 * 3",
        "TEAM": "R&D & QA",
    },
    resources: {
        "mysql": ResourceConfig {
            track: Some(
                "8.4",
            ),
            env: {
                "DB_HOST": "${host}",
            },
            allocations: {},
        },
        "postgres": ResourceConfig {
            track: Some(
                "16",
            ),
            env: {
                "DB_HOST": "${host}",
            },
            allocations: {},
        },
    },
}
