crates/config/tests/snapshots/project_config__project_config_parses_resource_only_controls_and_defaults.snap
---
source: crates/config/tests/project_config.rs
expression: "(defaults, resource_only)"
---
(
    ProjectConfig {
        serve: true,
        env_file: ".env",
        php: None,
        root: None,
        env: {},
        resources: {},
    },
    ProjectConfig {
        serve: false,
        env_file: ".env.local",
        php: None,
        root: Some(
            "missing",
        ),
        env: {
            "APP_ENV": "local",
            "APP_URL": "${url}",
        },
        resources: {},
    },
)
