crates/config/tests/snapshots/project_config__project_config_parses_strict_resource_env_shape.snap
---
source: crates/config/tests/project_config.rs
expression: config
---
ProjectConfig {
    serve: true,
    env_file: ".env",
    php: Some(
        PhpConfig {
            version: Some(
                "8.4",
            ),
            extensions: [],
        },
    ),
    root: Some(
        "public",
    ),
    env: {
        "APP_URL": "${url}",
    },
    resources: {
        "mysql": ResourceConfig {
            track: Some(
                "8.0",
            ),
            env: {
                "DB_HOST": "${host}",
            },
            allocations: {
                "app-db": AllocationConfig {
                    env: {
                        "DB_DATABASE": "${database}",
                    },
                },
            },
        },
        "postgres": ResourceConfig {
            track: Some(
                "latest",
            ),
            env: {},
            allocations: {},
        },
    },
}
