crates/config/tests/snapshots/project_config__project_config_writer_creates_preferred_file_when_missing-2.snap
---
source: crates/config/tests/project_config.rs
expression: "read_file(&project.join(\"pv.yml\"))?"
---
php: '8.3'
