crates/config/tests/snapshots/project_config__project_config_writer_preserves_existing_config_file_mode-2.snap
---
source: crates/config/tests/project_config.rs
expression: read_file(&config_path)?
---
php: '8.4'
