crates/config/tests/snapshots/project_config__project_config_writer_preserves_existing_config_file_mode.snap
---
source: crates/config/tests/project_config.rs
expression: "(updated.path.file_name(), updated.exists, updated.config)"
---
(
    Some(
        "pv.yml",
    ),
    true,
    ProjectConfig {
        serve: true,
        env_file: ".env",
        php: Some(
            PhpConfig {
                version: Some(
                    "8.4",
                ),
                extensions: [],
            },
        ),
        root: None,
        env: {},
        resources: {},
    },
)
