crates/config/tests/snapshots/project_config__project_config_writer_preserves_php_extensions_when_updating_track.snap
---
source: crates/config/tests/project_config.rs
expression: "read_file(&project.join(\"pv.yml\"))?"
---
php:
  version: '8.4'
  extensions:
  - redis
  - xdebug
