crates/config/tests/snapshots/project_config__project_config_writer_preserves_resource_only_controls.snap
---
source: crates/config/tests/project_config.rs
expression: "read_file(&project.join(\"pv.yml\"))?"
---
serve: false
env_file: .env.local
root: missing
